--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <a href="https://github.com/i-Roma/Example/tree/example/Landing%20with%20Bootstrap" target="_blank">
                             <span class="item-portfolio sprite cross hvr-push"></span>
                         </a>
-                        <a href="https://github.com/i-Roma/Example/tree/example/Adaptive%20layout%20without%20Bootstrap%20" target="_blank">
+                        <a href="https://github.com/i-Roma/CV" target="_blank">
                             <span class="item-portfolio this-page sprite github hvr-push">This Page</span>
                         </a>
 
