--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </div>
                         <div class="hobbie">
                             <img src="./img/crossfit.png" alt="Crossfit"/>
-                            <p class="par">Love Physical exerisize</p>
+                            <p class="par">Love Physical exercises</p>
                             By and large, I like everything that is called outdoor activity. But I like to test
                             myself with different physical activities as well. For me, one of the best way to do
                             it — to pass training by the CrossFit methodology. Due to CrossFit training, besides
