--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                     <li class="menu-item"><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
                     <li class="menu-item"><a href="#contact" class="smoothScroll">Contact</a></li>
                     <li class="menu-item"><a href="#wallpaper" class="smoothScroll">Back to Top</a></li>
-
                 </ul>
             </nav>
         </header>
@@ -57,6 +56,7 @@
                             <img src="./img/sass.png" alt="SASS"/>
                             <img src="./img/gulp.png" alt="Gulp"/>
                             <img src="./img/github.gif" alt="GitHub"/>
+                            <img src="./img/angularjs-logo.png" alt="GitHub"/>
                     </div>
                 </section>
 
@@ -80,28 +80,29 @@
                 <section class="education">
                     <p class="sprite book" id="education"></p>
                     <h2 class="caption-block caption-gray">Education</h2>
+                    
                     <p class="caption-study">
-                        <a href="http://dio-soft.org/" target="_blank">DIO-soft</a>
+                        <a href="http://dio-soft.org/" class="hvr-wobble-horizontal" target="_blank">DIO-soft</a>
                     </p>
                         <p class="dbl-tab">
-                            Certificate of completion: <a href="http://dio-soft.org/junior-frontend-developer" target="_blank">Junior Front-End Developer</a>
+                            Certificate of completion: <a href="http://dio-soft.org/junior-frontend-developer" class="hvr-wobble-horizontal" target="_blank">Junior Front-End Developer</a>
                         </p>
 
                     <p class="caption-study">
-                        <a href="http://itea.ua/" target="_blank">IT EDUCATION ACADEMY UKRAINE LLC</a>
+                        <a href="http://itea.ua/" class="hvr-wobble-horizontal" target="_blank">IT EDUCATION ACADEMY UKRAINE LLC</a>
                     </p>
                         <p class="dbl-tab">
-                            Certificate of completion: <a href="http://itea.ua/javascript-basic/" target="_blank">JavaScript Essential</a>
+                            Certificate of completion: <a href="http://itea.ua/javascript-basic/" class="hvr-wobble-horizontal" target="_blank">JavaScript Essential</a>
                         </p>
                         <p class="dbl-tab">
-                            Certificate of completion: <a href="http://itea.ua/javascript-advanced/" target="_blank">JavaScript Advanced</a>
+                            Certificate of completion: <a href="http://itea.ua/javascript-advanced/" class="hvr-wobble-horizontal" target="_blank">JavaScript Advanced</a>
                         </p>
                         <p class="dbl-tab">
-                            Certificate of completion: <a href="http://itea.ua/javascript-professional/" target="_blank">JavaScript Professional</a>
+                            Certificate of completion: <a href="http://itea.ua/javascript-professional/" class="hvr-wobble-horizontal" target="_blank">JavaScript Professional</a>
                         </p>
 
                     <p class="caption-study">
-                        <a href="http://iszzi.kpi.ua/index.php/ua/" target="_blank">Institute of Special Communications and Information Potection of National Technical University of Ukraine "Kyiv Polytechnic Institute"</a>
+                        <a href="http://iszzi.kpi.ua/index.php/ua/" class="hvr-wobble-horizontal" target="_blank">Institute of Special Communications and Information Potection of National Technical University of Ukraine "Kyiv Polytechnic Institute"</a>
                     </p>
                         <p class="tab">Specialist Degree "Management information sysytem and technology" — (2011 - 2012)</p>
                         <p class="tab">Bachelor Degree "Management information sysytem and technology" — (2007 — 2011)</p>
@@ -109,7 +110,7 @@
                     <p class="caption-study">School</p>
 
                     <p class="tab">
-                        <a href="http://school-78.kiev.ua/index.php/about-school" target="_blank">Comprehensive secondary school №78, Kyiv</a>
+                        <a href="http://school-78.kiev.ua/index.php/about-school" class="hvr-wobble-horizontal" target="_blank">Comprehensive secondary school №78, Kyiv</a>
                     </p>
                 </section>
 
@@ -160,7 +161,7 @@
                         </div>
                         <div class="hobbie">
                             <img src="./img/crossfit.png" alt="Crossfit"/>
-                            <p class="par">Love Physical exercises</p>
+                            <p class="par">Love Physical Exercises</p>
                             By and large, I like everything that is called outdoor activity. But I like to test
                             myself with different physical activities as well. For me, one of the best way to do
                             it — to pass training by the CrossFit methodology. Due to CrossFit training, besides
@@ -204,13 +205,15 @@
                         <a href="https://github.com/i-Roma/Example/tree/example/Adaptive%20layout%20without%20Bootstrap%20" target="_blank">
                             <span class="item-portfolio sprite github hvr-push">Adaptive layout without Bootstrap</span>
                         </a>
-                        <a href="https://github.com/i-Roma/Example/tree/example/Landing%20with%20Bootstrap" target="_blank">
+                        <a href="http://crossfit.16mb.com/" target="_blank">
                             <span class="item-portfolio sprite cross hvr-push"></span>
                         </a>
                         <a href="https://github.com/i-Roma/CV" target="_blank">
-                            <span class="item-portfolio this-page sprite github hvr-push">This Page</span>
+                            <span class="item-portfolio bigger-font sprite github hvr-push">This Page</span>
                         </a>
-
+                        <a href="https://www.codecademy.com/roma.intellect" target="_blank">
+                            <span class="item-portfolio bigger-font code_cademy sprite codecademy hvr-push">AngularJS</span>
+                        </a>
                     </div>
                 </section>
 
