--- a/index.html
+++ b/index.html
@@ -82,23 +82,36 @@
                     <h2 class="caption-block caption-gray">Education</h2>
                     
                     <p class="caption-study">
+                        <a href="https://www.codecademy.com/roma.intellect" class="hvr-wobble-horizontal" target="_blank">Codecademy: Learn to code</a>
+                    </p>
+                        <p class="dbl-tab">
+                            jQuery
+                        </p>
+                        <p class="dbl-tab">
+                            JavaScript
+                        </p>
+                        <p class="dbl-tab">
+                            AngularJS
+                        </p>
+
+                    <p class="caption-study">
                         <a href="http://dio-soft.org/" class="hvr-wobble-horizontal" target="_blank">DIO-soft</a>
                     </p>
                         <p class="dbl-tab">
-                            Certificate of completion: <a href="http://dio-soft.org/junior-frontend-developer" class="hvr-wobble-horizontal" target="_blank">Junior Front-End Developer</a>
+                            Certificate of completion: <a href="./certificates/fe.html" class="hvr-wobble-horizontal" target="_blank">Junior Front-End Developer</a>
                         </p>
 
                     <p class="caption-study">
                         <a href="http://itea.ua/" class="hvr-wobble-horizontal" target="_blank">IT EDUCATION ACADEMY UKRAINE LLC</a>
                     </p>
                         <p class="dbl-tab">
-                            Certificate of completion: <a href="http://itea.ua/javascript-basic/" class="hvr-wobble-horizontal" target="_blank">JavaScript Essential</a>
+                            Certificate of completion: <a href="./certificates/jse.html" class="hvr-wobble-horizontal" target="_blank">JavaScript Essential</a>
                         </p>
                         <p class="dbl-tab">
-                            Certificate of completion: <a href="http://itea.ua/javascript-advanced/" class="hvr-wobble-horizontal" target="_blank">JavaScript Advanced</a>
+                            Certificate of completion: <a href="./certificates/jsa.html" class="hvr-wobble-horizontal" target="_blank">JavaScript Advanced</a>
                         </p>
                         <p class="dbl-tab">
-                            Certificate of completion: <a href="http://itea.ua/javascript-professional/" class="hvr-wobble-horizontal" target="_blank">JavaScript Professional</a>
+                            Certificate of completion: <a href="./certificates/jsp.html" class="hvr-wobble-horizontal" target="_blank">JavaScript Professional</a>
                         </p>
 
                     <p class="caption-study">
@@ -207,6 +220,9 @@
                         </a>
                         <a href="http://crossfit.16mb.com/" target="_blank">
                             <span class="item-portfolio sprite cross hvr-push"></span>
+                        </a>
+                        <a href="https://www.codecademy.com/roma.intellect" target="_blank">
+                            <span class="item-portfolio bigger-font code_cademy sprite codecademy hvr-push">JavaScript</span>
                         </a>
                         <a href="https://github.com/i-Roma/CV" target="_blank">
 
